tests/error/poly_errors_py312/free_var_in_bound2.py
from guppylang.decorator import guppy

T = guppy.type_var("T", copyable=True, droppable=True)


@guppy.struct
class MyStruct[x: T]:
    pass


guppy.compile(MyStruct)
