tests/error/poly_errors_py312/free_var_in_bound2.err
Error: Free type variable (at $FILE:7:18)
  | 
5 | 
6 | @guppy.struct
7 | class MyStruct[x: T]:
  |                   ^ Type variable `T` is unbound

Note: Only struct and function definitions can be generic. Other generic values
or nested types are not supported.

Guppy compilation failed due to 1 previous error
